<resources>
    <string name="app_name">VeggieFest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">About_Us</string>

    <string name="lavelLoginTextView">Login</string>
    <string name="userName_editText">Enter User Email Id</string>
    <string name="userPassword_editText">Password</string>
    <string name="checkBox">Remember Credentials</string>
    <string name="loginButton">Login</string>
    <string name="SignupButton">Sign Up</string>
    <string name="newUserTextView">Register for new Account</string>
    <string name="googleButton">Google</string>
    <string name="splashtagline">GO Green, Eat Green</string>
    <string name="facebookButton">Facebook</string>
    <string name="title_activity_item_selection">ItemSelection</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="textViewLoginWith">Login with</string>
    <string name="textView_customerorder">Order By Category</string>


    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_order__navigation_drawer">Order_NavigationDrawer</string>


    <string-array name="Category_Array">
        <item>Seasonal Vegetables</item>
        <item>Off Seasonal Vegetable</item>
        <item>Green Vegetable</item>
        <item>Fibre Vegetable</item>
    </string-array>


    <string-array name="Seasonal_Vegetable">
        <item>Tomato</item>
        <item>Potato</item>
        <item>Carrot</item>
        <item>Cabbage</item>
        <item>Onion</item>
        <item>Ginger</item>
        <item>Pumpkin</item>
        <item>Bhindi</item>
    </string-array>
    <string-array name="coustomers_orders">
        <item>Order1</item>
        <item>Order2</item>
        <item>Order3</item>
        <item>Order4</item>
    </string-array>

    <string name="password_registernewaccount">Password</string>
    <string name="button_registernewaccount">Register</string>
    <string name="phone_registernewaccount">Mobile No</string>
    <string name="userid_registernewaccount">User Email Id</string>
    <string name="name_registernewaccount">Name</string>
    <string name="aadhar_registernewaccount">Aahar Card No</string>
    <string name="label_registernewaccount">Registration Form</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="fbId">408791336352168</string>
    <string name="default_web_client_id">970891721652-spr3epe0soaago54ijats24mkv0bpl46.apps.googleusercontent.com</string>


</resources>
