<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.shashank.user.veggiefest.com.fragments.RegisterNewAccount_Fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_registernewaccount"
        android:textSize="20sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="#000"
        android:padding="8dp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/imageview_rgstrnwacct"
        android:src="@drawable/camera"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextName"
            android:inputType="textPersonName"
            android:hint="@string/name_registernewaccount"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="8dp"
            android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextAadhar"
            android:padding="8dp"
            android:textSize="15sp"
            android:maxLength="12"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/aadhar_registernewaccount"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextphone"
            android:padding="8dp"
            android:textSize="15sp"
            android:maxLength="10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/phone_registernewaccount"
            android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUserId"
            android:hint="@string/userid_registernewaccount"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextpassword"
            android:hint="@string/password_registernewaccount"
            android:inputType="textPassword"
            android:padding="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRegister"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/button_registernewaccount"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>



</LinearLayout>
